function(add_jplm_part1_common_lib_test TEST_NAME TEST_BIN_NAME TEST_SOURCE)
	add_executable(${TEST_BIN_NAME} ${TEST_SOURCE})
	target_link_libraries(${TEST_BIN_NAME} PRIVATE gtest_main)
	target_link_libraries(${TEST_BIN_NAME} PRIVATE jplm_part1_common)
	add_test(${TEST_NAME} ${EXECUTABLE_OUTPUT_PATH}/${TEST_BIN_NAME} "${CMAKE_HOME_DIRECTORY}/resources")
endfunction()

add_jplm_part1_common_lib_test(JpegPlenoSignatureBoxTests JpegPlenoSignatureBox_tests Boxes/JpegPlenoSignatureBoxTests.cpp)
add_jplm_part1_common_lib_test(FileTypeBoxTests FileTypeBox_tests Boxes/FileTypeBoxTests.cpp)
add_jplm_part1_common_lib_test(JpegPlenoFileTypeContentsTests JpegPlenoFileTypeContents_tests Boxes/JpegPlenoFileTypeContentsTests.cpp)